--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
